--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,9 @@ select:focus {
   transition: background-color 0.3s ease, transform 0.2s ease;
   width: 200px; /* Match width with other buttons */
 }
+.create-but{
+  margin-left: 30px;
+}
 
 .settings-button:hover {
   background-color: #0056b3;
